@@ -11,9 +11,11 @@ import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
 import java.sql.SQLException;
 import java.sql.Types;
+import java.util.Calendar;
 import java.util.List;
 import java.util.Set;
 
+import org.junit.Assert;
 import org.junit.Test;
 import org.springframework.dao.DataAccessException;
 import org.springframework.jdbc.core.ResultSetExtractor;
@@ -24,10 +26,10 @@ import org.tdar.core.bean.resource.datatable.DataTableColumn;
 import org.tdar.core.exception.TdarRecoverableRuntimeException;
 import org.tdar.db.conversion.converters.DatasetConverter;
 import org.tdar.db.conversion.converters.ExcelConverter;
+import org.tdar.filestore.Filestore.ObjectType;
 import org.tdar.struts.action.AbstractDataIntegrationTestCase;
 
 public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
-
 
     @Test
     @Rollback
@@ -43,22 +45,40 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
         int i = 1; // 0 is the tDAR ID Column which may not be returned
         for (DataTableColumn col : table.getSortedDataTableColumns()) {
             logger.debug("{} : {}", col.getSequenceNumber(), col);
-            assertEquals(new Integer(i), col.getSequenceNumber());
+            assertEquals(Integer.valueOf(i), col.getSequenceNumber());
             i++;
         }
     }
 
     @Test
     @Rollback
-    public void testBlankExceedingRowsAndExtraColumnAtEnd() throws IOException {
-        importSpreadsheetAndConfirmExceptionIsThrown(new File(getTestFilePath(), "Pundo_degenerate.xls"),
-                "row #49 has more columns (6) than this sheet has column names (5) - Appendix 8 (2)");
+    public void testPoiInfiniteLoop() throws IOException {
+        InformationResourceFileVersion weirdColumnsDataset = makeFileVersion(new File(getTestFilePath(), "infinite-loop.xlsx"), 519);
+        ExcelConverter converter = new ExcelConverter(tdarDataImportDatabase, weirdColumnsDataset);
+        converter.execute();
     }
 
     @Test
     @Rollback
-    public void testExtraColumnAtStartThrowsException() throws IOException {
-        importSpreadsheetAndConfirmExceptionIsThrown(new File(getTestFilePath(), "no_first_column_name.xlsx"), "row #1 has more columns (0) than this sheet has column names (1) - Sheet1");
+    public void testStdeva() throws IOException {
+        InformationResourceFileVersion weirdColumnsDataset = makeFileVersion(new File(getTestFilePath(), "stdev.xlsx"), 520);
+        ExcelConverter converter = new ExcelConverter(tdarDataImportDatabase, weirdColumnsDataset);
+        String msg = null;
+        try {
+            converter.execute();
+        } catch (Exception e) {
+            msg = e.getMessage();
+        }
+        assertEquals(
+                "you are using an excel function \"STDEVA\" that cannot be read at sheet \"Sheet1\" at cell: \"A7\", please replace it with the \"value\" of the calculation",
+                msg);
+    }
+
+    @Test
+    @Rollback
+    public void testBlankExceedingRowsAndExtraColumnAtEnd() throws IOException {
+        importSpreadsheetAndConfirmExceptionIsThrown(new File(getTestFilePath(), "Pundo_degenerate.xls"),
+                "Appendix 8 (2) - row #49 has more columns (6) than this sheet has column names (5)");
     }
 
     private void importSpreadsheetAndConfirmExceptionIsThrown(File spreadsheet, String expectedErrorMessage) throws IOException {
@@ -66,7 +86,7 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
         ExcelConverter converter = new ExcelConverter(tdarDataImportDatabase, weirdColumnsDataset);
         try {
             converter.execute();
-            assertTrue("Should never get to this point in the code.", false);
+            Assert.fail("Should never get to this point in the code.");
         } catch (TdarRecoverableRuntimeException e) {
             assertEquals(expectedErrorMessage, e.getMessage());
         }
@@ -82,13 +102,16 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
         assertEquals(1, dataTables.size());
         DataTable dataTable = dataTables.iterator().next();
         assertNotNull(dataTable.getColumnByDisplayName("Period"));
-        // assertNotNull(dataTable.getColumnByDisplayName("SumOfNo"));
-        // assertNotNull(dataTable.getColumnByDisplayName("1.00"));
-        // assertNotNull(dataTable.getColumnByDisplayName("ABC"));
-        // assertNotNull(dataTable.getColumnByName("period"));
-        // assertNotNull(dataTable.getColumnByName("sumofno"));
-        // assertNotNull(dataTable.getColumnByName("c1_00"));
-        // assertNotNull(dataTable.getColumnByName("abc"));
+        assertNotNull(dataTable.getColumnByName("col_period"));
+        assertNotNull(dataTable.getColumnByDisplayName("Stratigraphy"));
+        assertNotNull(dataTable.getColumnByDisplayName("Sites::N Coordinates"));
+        assertNotNull(dataTable.getColumnByDisplayName("Sites::E Coordinates"));
+        assertNotNull(dataTable.getColumnByDisplayName("Layers::Calibrated dates"));
+        assertNotNull(dataTable.getColumnByDisplayName("Dates::Uncalibrated date"));
+        assertNotNull(dataTable.getColumnByDisplayName("Dates::Margin of error"));
+        assertNotNull(dataTable.getColumnByDisplayName("Thesis?"));
+        assertNotNull(dataTable.getColumnByDisplayName("Dates::Cal 95% Min"));
+
     }
 
     @Test
@@ -104,7 +127,7 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
         assertNotNull(dataTable.getColumnByDisplayName("SumOfNo"));
         assertNotNull(dataTable.getColumnByDisplayName("1.00"));
         assertNotNull(dataTable.getColumnByDisplayName("ABC"));
-        assertNotNull(dataTable.getColumnByName("period"));
+        assertNotNull(dataTable.getColumnByName("col_period"));
         assertNotNull(dataTable.getColumnByName("sumofno"));
         assertNotNull(dataTable.getColumnByName("c1_00"));
         assertNotNull(dataTable.getColumnByName("abc"));
@@ -114,7 +137,7 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
     @Rollback
     public void testConverterAllStrings() throws Exception {
         InformationResourceFileVersion datasetTextOnly = makeFileVersion(new File(getTestFilePath(), "dataset_all_text.xls"), 500);
-        File storedFile = filestore.retrieveFile(datasetTextOnly);
+        File storedFile = filestore.retrieveFile(ObjectType.RESOURCE, datasetTextOnly);
         assertTrue("text file exists", storedFile.exists());
 
         ExcelConverter converter = new ExcelConverter(tdarDataImportDatabase, datasetTextOnly);
@@ -141,13 +164,13 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
     @Rollback
     public void testConverterWithInts() throws Exception {
         InformationResourceFileVersion datasetWithInts = makeFileVersion(new File(getTestFilePath(), "dataset_with_ints.xls"), 501);
-        File storedFile = filestore.retrieveFile(datasetWithInts);
+        File storedFile = filestore.retrieveFile(ObjectType.RESOURCE, datasetWithInts);
         assertTrue("text file exists", storedFile.exists());
         DatasetConverter converter = DatasetConversionFactory.getConverter(datasetWithInts, tdarDataImportDatabase);
 
         converter.execute();
         DataTable table = converter.getDataTables().iterator().next();
-        assertTrue("table created", table.getName().indexOf("sheet1") == -1);
+        assertEquals("table created", -1, table.getName().indexOf("sheet1"));
         assertTrue("table created", table.getName().indexOf("dataset_with_ints") > 0);
 
         // confirm that all the columns in the new table are ints
@@ -157,8 +180,10 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
                     public Object extractData(ResultSet rs)
                             throws SQLException, DataAccessException {
                         ResultSetMetaData meta = rs.getMetaData();
+                        assertEquals(Types.VARCHAR, meta.getColumnType(1));
                         assertEquals(Types.BIGINT, meta.getColumnType(2));
                         assertEquals(Types.BIGINT, meta.getColumnType(3));
+                        assertEquals(Types.VARCHAR, meta.getColumnType(4));
                         assertEquals(Types.BIGINT, meta.getColumnType(5));
                         return null;
                     }
@@ -169,13 +194,13 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
     @Rollback
     public void testConverterWithDates() throws Exception {
         InformationResourceFileVersion datasetWithDates = makeFileVersion(new File(getTestFilePath(), "dataset_with_dates.xls"), 592);
-        File storedFile = filestore.retrieveFile(datasetWithDates);
+        File storedFile = filestore.retrieveFile(ObjectType.RESOURCE, datasetWithDates);
         assertTrue("text file exists", storedFile.exists());
         DatasetConverter converter = DatasetConversionFactory.getConverter(datasetWithDates, tdarDataImportDatabase);
 
         converter.execute();
         DataTable table = converter.getDataTables().iterator().next();
-        assertTrue("table created", table.getName().indexOf("sheet1") == -1);
+        assertEquals("table created", -1, table.getName().indexOf("sheet1"));
         assertTrue("table created", table.getName().indexOf("dataset_with_dates") > 0);
 
         // confirm that all the columns in the new table are dates
@@ -193,9 +218,14 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
                         rs.next();
                         final Date date = rs.getDate(2);
                         // I know that getYear, getMonth and getDate are deprecated, but this just seemed the simplest.
-                        assertTrue("Year should be 2003: " + date.getYear(), date.getYear() == 2003 - 1900);
-                        assertTrue("Month should be 1: " + date.getMonth(), date.getMonth() == 1);
-                        assertTrue("Day should be 1: " + date.getDate(), date.getDate() == 1);
+                        Calendar calendar = Calendar.getInstance();
+                        calendar.setTime(date);
+                        int year = calendar.get(Calendar.YEAR);
+                        int month = calendar.get(Calendar.MONTH);
+                        int day = calendar.get(Calendar.DAY_OF_MONTH);
+                        assertEquals("Year should be 2003: " + year, 2003, year);
+                        assertEquals("Month should be 1: " + month, 1, month);
+                        assertEquals("Day should be 1: " + day, 1, day);
                         return null;
                     }
                 }, false);
@@ -205,7 +235,7 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
     @Rollback
     public void testConverterWithFloats() throws Exception {
         InformationResourceFileVersion datasetWithFloats = makeFileVersion(new File(getTestFilePath(), "dataset_with_floats.xls"), 502);
-        File storedFile = filestore.retrieveFile(datasetWithFloats);
+        File storedFile = filestore.retrieveFile(ObjectType.RESOURCE, datasetWithFloats);
         assertTrue("text file exists", storedFile.exists());
         DatasetConverter converter = DatasetConversionFactory.getConverter(datasetWithFloats, tdarDataImportDatabase);
         converter.execute();
@@ -232,7 +262,7 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
     public void testConverterWithMultipleSheetsAndHiddenFields()
             throws Exception {
         InformationResourceFileVersion datasetWithHiddenFields = makeFileVersion(new File(getTestFilePath(), "england_woods.xlsx"), 503);
-        File storedFile = filestore.retrieveFile(datasetWithHiddenFields);
+        File storedFile = filestore.retrieveFile(ObjectType.RESOURCE, datasetWithHiddenFields);
         assertTrue("text file exists", storedFile.exists());
         DatasetConverter converter = DatasetConversionFactory.getConverter(datasetWithHiddenFields, tdarDataImportDatabase);
         converter.execute();
@@ -262,9 +292,9 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
     @Test
     @Rollback
     public void testMalformedExcelDatasetFromScott() throws IOException {
-        InformationResourceFileVersion datasetWithHiddenFields = makeFileVersion(new File(getTestFilePath(), 
+        InformationResourceFileVersion datasetWithHiddenFields = makeFileVersion(new File(getTestFilePath(),
                 "PFRAA_fake_Ferengi_trading_post_data_for tDAR test.xls"), 509);
-        File storedFile = filestore.retrieveFile(datasetWithHiddenFields);
+        File storedFile = filestore.retrieveFile(ObjectType.RESOURCE, datasetWithHiddenFields);
         assertTrue("text file exists", storedFile.exists());
         DatasetConverter converter = DatasetConversionFactory.getConverter(datasetWithHiddenFields, tdarDataImportDatabase);
         try {
@@ -281,7 +311,7 @@ public class ExcelConverterITCase extends AbstractDataIntegrationTestCase {
         assertEquals(35, inventory.getColumnNames().size());
 
         DataTable context = converter.getDataTableByName("e_509_ifti_context_codes");
-        assertEquals(10, context.getColumnNames().size());
+        assertEquals(6, context.getColumnNames().size());
 
         DataTable data = converter.getDataTableByName("e_509_pfraa_ifti_data");
         assertEquals(17, data.getColumnNames().size());
